# ackinacki

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  clippy.toml  justfile  misbehave_rules.yaml  rustfmt.toml  sk-commit-tool
block-manager/: CHANGELOG.md  Cargo.toml  README.md  build.rs  config-default.yaml
block-manager/migrations/: 20240627072921_init.down.sql  20240627072921_init.up.sql
block-manager/src/: bm_contract_root.rs  bp_resolver.rs  cli.rs  events.rs  executor.rs  lib.rs  license_root.rs  message_types.rs  metrics.rs  raw_blocks.rs  rest_api_routes.rs  server.rs  signals.rs
block-manager/src/application/: executor.rs  metrics.rs  mod.rs  quarantine.rs
block-manager/src/block_subscriber/: mod.rs
block-manager/src/blockchain/: mod.rs
block-manager/src/domain/: bp_resolver.rs  mod.rs  models.rs
block-manager/src/infrastructure/: mod.rs  tracing.rs
block-manager/src/state/: downloader.rs  mod.rs
bm-archive-processor/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
bm-archive-processor/src/: cli.rs  config.rs  main.rs  utils.rs
bm-archive-processor/src/app/: metrics.rs  mod.rs  pipeline.rs  tests.rs
bm-archive-processor/src/domain/: config.rs  grouping.rs  mod.rs  models.rs  paths.rs  traits.rs
bm-archive-processor/src/infra/: factory.rs  file_storage.rs  logging.rs  mod.rs  s3_storage.rs  sqlite_db.rs  sqlite_ddl.rs
chitchat/: .cargo-checksum.json  Cargo.toml
chitchat/src/: configuration.rs  delta.rs  digest.rs  failure_detector.rs  lib.rs  listener.rs  message.rs  serialize.rs  server.rs  state.rs  types.rs
chitchat/src/transport/: channel.rs  mod.rs  transport_layer.rs  udp.rs  utils.rs
database/: Cargo.toml
database/src/: currency_collection.rs  documents_db.rs  helpers.rs  lib.rs  serialization.rs
database/src/sqlite/: account.rs  attestation.rs  bk_set_update.rs  block.rs  message.rs  mod.rs  sqlite_helper.rs  transaction.rs
gossip/: Cargo.toml
gossip/src/: gossip_peer.rs  lib.rs
gql-server/: .env  CHANGELOG.md  Cargo.toml  README.md  build.rs  config-default.yaml
gql-server/crates/struct-fields-macro-derive/: Cargo.toml
gql-server/data/: schema-archive.db
gql-server/src/: client.rs  config.rs  defaults.rs  helpers.rs  lib.rs  main.rs  metrics.rs  signals.rs  web.rs
gql-server/src/schema/: mod.rs
gql-server/tests/: requests.http
http-server/: Cargo.toml
http-server/src/: api.rs  helpers.rs  lib.rs  metrics.rs
http-server/src/api/: bk_set.rs  bk_set_summary.rs  bk_set_update.rs  blocks.rs  mod.rs  (+6 more)
http-server/tests/: message_router.rs  requests.http  tests.rest
message-router/: Cargo.toml
message-router/src/: bp_resolver.rs  defaults.rs  lib.rs  message_router.rs  process_ext_messages.rs  token.rs  validation.rs
message-router/tests/: tests.rest
migration-tool/: CHANGELOG.md  Cargo.toml  README.md  build.rs
migration-tool/src/: lib.rs  main.rs
network/: Cargo.toml  README.md
network/certs/: cert.der  debug.ca.pem  debug.key.pem  key.der
network/examples/: keygen.rs
network/src/: binchannel.rs  channel.rs  cli.rs  config.rs  direct_sender.rs  gossip.rs  lib.rs  message.rs  metrics.rs  network.rs  socket_addr.rs  tls.rs  topology.rs  transfer.rs  unix_signals.rs
network/tests/: transport_test.rs
node/: .gitignore  Cargo.toml  blockchain.conf.json  build.rs  old_blockchain.conf.json
node-helper/: Cargo.toml  README.md
node-helper/src/: main.rs
node/repair_accounts_data/: 1033ea894040adba26f13680690faf3e05f74987610e4f5d50b22142333a8787_2f0f1240171f5ca39ad87df6410bc0e821aa94469a85075cdc5e145c5add4038  16e4bb3531a5600bf654d89ed13c33f6e6b1b06a9210a6b367eccbec3c36cf21_3cfbf27e3c23b497936d891ebcf67133cc433adbabe493ebf6b342fa63e0c75a  2018a2548ce0b107774bdb623dc4fa30ccf38e7269288c2093c555f416fad797_6ea18bb25709c6763fd6182ad270b04b58d60a10171fd766c262b464df765fc5  3db40895e2ce599e425f810e768e7ff005526fa40dde248e124d147904e6cc2c_a38a9060afd8572498976ddd9e289c255a3fd92d984889097acde75e9f477a81  52ca31e0fc400ee3ef8eaced777f9df3d9b350221835cb0b7b7dad59271d214e_6218ef2d827095f7dedd2e37c134d8fe95542b24d5f47a0ed331138c976b2f31  7abb85f52411c0ee3b372996bc54526bcfb7fc232236101ad9b9248e6e046d77_8ef1880f91b6807ae998dcbf390e408dcf8ade189725a7868ed7704d00b56289  85eee8fe56e3f77470a982870de2dad0014aa355aad4a052c17468df945c31d3_cc63be63625a164dbd9888be1ba5d3f2d0c0f19b634f3592ae605684ed7005f6  8a5a1110e1c873abcea15a8ab74ab08d5514cdca5e3b507179e4d0f5ad532193_831fd0a8f629bd5673d8c0938ce982defe0a1bb0d6ed4081d282d44d69e453c6  MobileVerifiersContractRoot.tvc  bb89cf85f1a5c8521f879e9bad83257db4c9036ce26951c0ae1aa930b6dd1486_149b1168f982a62c477d58d02827838062b2fe80129809979077434408c31c8d  c0a07d04d40f719e02914f05918b389229d6cb6499da8dfe86201ae07fb7b8c9_339fb0e3b582028680804bd10221d6f1d73ac92950ec899f38197408eb505938  d84bdfa753950541bafac1e8137bba14fa6aa55409d9ee33252d442b4e3e682a_f0583771a50f286e88e7d7dfdbf2fb807aecf9f2c5d54985ad8da92197cc6857  d875df9cf418106d1407f60be189adc9e7c0e6db430ae945ffa37448ef46469f_3227713c1fe1656f2aa429db5fe754b95f1bf326cab28e8d9105b6abab42e881  f9734bf55de573030097d12c6b95af6525dd1ee9e44a6419f78d183c3b79d394_23f1dfbe7019649612e9e5f2550a340bf87ccb1cd5c4f771d2d6c675452718de  ff0e03891282fed4aad30b1b522e4b6f0efc6fda970bab2940e18425ed1baed6_3db2754f210f3d8fc4f696cbb0a14120cc4a848119fc0d193b51f4bd365b3eb4
node/src/: lib.rs  live_metrics.rs  signals.rs
proxy/: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  compose.yaml  config.yaml  proxy_list.json
proxy/src/: bk_set_watcher.rs  config.rs  lib.rs  metrics.rs  server.rs  string_socket_addr.rs  tls.rs  tracing.rs
shared/ext-messages-auth/: .gitignore  Cargo.toml
shared/sdk-wrapper/: Cargo.toml
telemetry_utils/: Cargo.toml
telemetry_utils/src/: instrumented_channel_ext.rs  lib.rs  mpsc.rs
transport-layer/: Cargo.toml  build.rs
transport-layer/src/: host_port.rs  lib.rs  pkcs12.rs  server.rs  tls.rs  transport.rs  utils.rs
tvm_contracts/: Cargo.toml
tvm_contracts/src/: contract.rs  lib.rs  message.rs  stack.rs  tvm.rs
(+1059 files in other folders)
