[workspace]
resolver = "3"
members = [
    #
    "block-manager",
    "bm-archive-processor",
    "chitchat",
    "database",
    "gossip",
    "gql-server",
    #    "helpers/proof_helper",
    "helpers/snapshot-helper",
    "http-server",
    "libsqlite3-sys",
    "message-router",
    "migration-tool",
    "network",
    "node",
    "node-helper",
    "node/libs/account-inbox",
    "node/libs/account-state",
    "node/libs/multi-map",
    "node/libs/node-types",
    "node/libs/thread-reference-state",
    "node/libs/trie-map",
    "node/libs/versioned_struct",
    "proxy",
    "shared/ext-messages-auth",
    "shared/sdk-wrapper",
    "telemetry_utils",
    "transport-layer",
    "tvm_contracts",
]

package.version = "0.15.1"
package.edition = "2021"
package.rust-version = "1.86.0"
package.license = "LicenseRef-Acki-Nacki-Node-License"
package.license-file = "LICENSE.md"


[profile.release-with-debug]
inherits = "dev"
debug = true
overflow-checks = true

[profile.release]
overflow-checks = true

[workspace.dependencies]
actix-web = { version = "4.8.0" }
aerospike = "1.3.0"
anyhow = "1.0.97"
async-trait = { version = "0.1.85" }
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive", "env"] }
clickhouse = { version = "0.14.2" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
enum_dispatch = { version = "0.3.13" }
faster-hex = { version = "0.10.0", features = ["serde"] }
futures = "0.3"
gosh_blst = { git = "https://github.com/gosh-sh/gosh_blst.git", features = ["portable"], rev = "a9da6e80b30143e04ca06ea1090525ba8cf1f299" }
governor = "0.10.0"
hex = "0.4.3"
hex-literal = { version = "1.1.0" }
itertools = { version = "0.14.0" }
lazy_static = "1.4.0"
lockfree = { git = 'https://github.com/tvmlabs/lockfree.git', package = 'lockfree' }
monotree = "0.4.0"
nonzero_ext = { version = "0.3.0", default-features = false }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
rand = "0.8.5"
rayon = { version = "1.10.0" }
rcgen = "0.13"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls = { version = "0.23.20", default-features = false }
rustls-pemfile = { version = "2.2.0" }
salvo = { version = "0.77", features = ["affix-state", "anyhow", "catch-panic", "logging", "quinn", "rustls", "serve-static", "test"] }
semver = "1.0.27"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.12.0"
signal-hook = "0.3.18"
tempfile = { version = "3.21.0" }
testdir = "0.9.3"
thiserror = "2.0.3"
tokio = { version = "1.44.2", features = ["full"] }
tokio-retry = { version = "0.3.0" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"
url = { version = "2.5.0", features = ["serde"] }
wasmtime = "36.0.2"
zstd = { version = "0.13.3" }

tvm_abi = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an' }
tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an' }
tvm_block_json = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an' }
tvm_client = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an', default-features = false, features = ["std", 'rustls-tls-webpki-roots'] }
tvm_executor = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an', features = ['signature_with_id'] }
tvm_sdk = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an' }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an' }
tvm_vm = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v2.24.20.an', features = ['gosh'] }

account-state = { path = "node/libs/account-state" }
chitchat = { path = "chitchat" }
database = { path = "database" }
ext-messages-auth = { path = "shared/ext-messages-auth" }
gossip = { path = "gossip" }
http-server = { path = "http-server" }
message-router = { path = "message-router" }
migration-tool = { path = "migration-tool" }
multi-map = { path = "node/libs/multi-map" }
network = { path = "network" }
node = { path = "node" }
node-types = { path = "node/libs/node-types" }
sdk-wrapper = { path = "shared/sdk-wrapper" }
telemetry_utils = { path = "telemetry_utils" }
transport-layer = { path = "transport-layer" }
trie-map = { path = "node/libs/trie-map" }
tvm_contracts = { path = "tvm_contracts" }
versioned_struct = { path = "node/libs/versioned_struct" }

[patch.crates-io]
libsqlite3-sys = { path = "libsqlite3-sys" }
