[package]
name = "block-manager"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
build = "build.rs"

[[bin]]
name = "block-manager"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
database.workspace = true
message-router.workspace = true
network.workspace = true
node.workspace = true
opentelemetry.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
salvo.workspace = true
sdk-wrapper.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
telemetry_utils.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transport-layer.workspace = true
tvm_block.workspace = true
tvm_client.workspace = true
tvm_sdk.workspace = true
tvm_types.workspace = true
url.workspace = true

reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls-pki-types = { version = "1.8.0" }


dotenvy = "0"
