[package]
name = "bm-archive-processor"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.109.0"
bytes = "1.11.0"
clap.workspace = true
flate2 = "1.1.5"
libc = "0.2"
migration-tool.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
rusqlite.workspace = true
telemetry_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
typed-builder = "0.20.0"
xz2 = "0.1.7"

[dev-dependencies]
sha2 = "0.10.9"
tempfile = "3.10"
testdir = "0.9.3"
