[package]
name = "chitchat"
version = "0.9.0"
edition = "2024"
license = "MIT"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
description = "Cluster membership library using gossip with Scuttlebutt reconciliation."
repository = "https://github.com/quickwit-oss/chitchat"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = { version = "1.10.1" }
itertools.workspace = true
lru = "0.13"
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing.workspace = true
zstd.workspace = true

async-channel = { version = "2.3.1" }
once_cell = "1.21.3"
parking_lot.workspace = true
rustls-pki-types = "1.11.0"
transport-layer.workspace = true

[dev-dependencies]
assert-json-diff = "2"
proptest = { version = "1.4" }
tokio = { workspace = true, features = ["net", "sync", "rt-multi-thread", "macros", "test-util", "time"] }
tracing-subscriber.workspace = true

[features]
testsuite = []
