[package]
name = "database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
num-bigint.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

serde_with = "3.8.1"
