[package]
name = "database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono = "0.4.41"
num-bigint.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tracing.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

[features]
default = []

# Enable the extraction and storage of raw blocks and external out messages (events) only
store_events_only = []
