[package]
name = "gossip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gossip"
path = "src/bin/gossip.rs"

[dependencies]
anyhow.workspace = true
chitchat.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

cool-id-generator = "1.0.1"
poem = "3.1.8"
poem-openapi = { version = "5.1.12", features = ["swagger-ui"] }
structopt = "0.3.26"
