[package]
name = "gql-server"
version = "1.0.0"
edition = "2021"
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap = "1.8.0"
async-graphql = { version = "=7.2.1", features = ["dataloader"] }
async-graphql-warp = "=7.2.1"
bincode.workspace = true
chrono = "0.4.38"
clap.workspace = true
faster-hex.workspace = true
futures = "0.3.30"
num = "0.4.1"
opentelemetry.workspace = true
rand = "0.8.5"
rustls = { workspace = true }
serde.workspace = true
serde_json = { version = "1.0.114", features = ["preserve_order"] }
serde_with.workspace = true
serde_yaml = "0.9"
signal-hook.workspace = true
sqlx = { git = "https://github.com/launchbadge/sqlx", rev = "69bb5952ab665f6edfb461b45e63cc3b6d99a4d0", features = ["runtime-tokio", "sqlite", "tls-rustls"] }
telemetry_utils.workspace = true
tokio = { version = "1", features = ["full", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tvm_block = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v3.0.3-rc.an' }
tvm_client = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v3.0.3-rc.an', default-features = false, features = ["std", 'rustls-tls-webpki-roots'] }
tvm_types = { git = 'https://github.com/tvmlabs/tvm-sdk.git', tag = 'v3.0.3-rc.an' }
warp = { version = "0.3.7", features = ["tls"] }
zstd.workspace = true

[dev-dependencies]
migration-tool.workspace = true
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
rusqlite.workspace = true
testdir.workspace = true
tokio.workspace = true

[[bin]]
name = "gql-server"
path = "src/main.rs"
