[package]
name = "http-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
parking_lot.workspace = true
rcgen.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

httpdate = "1.0.3"
