[package]
name = "http-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
ext-messages-auth.workspace = true
hex.workspace = true
httpdate = "1.0.3"
node-types.workspace = true
opentelemetry.workspace = true
parking_lot.workspace = true
rcgen.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
telemetry_utils.workspace = true
tokio.workspace = true
tracing.workspace = true
transport-layer.workspace = true
tvm_block.workspace = true
tvm_types.workspace = true

message-router.workspace = true

[dev-dependencies]
actix-rt = "2.10.0"
actix-web.workspace = true
lazy_static.workspace = true
