[package]
name = "message-router"
edition = "2021"
version = "0.1.0"
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
http-server.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry_utils.workspace = true
tracing.workspace = true
tvm_types.workspace = true

awc = "3.5.1"
env_logger = "0.11.5"
mockall = "0.13.1"

[dev-dependencies]
actix-rt = "2.10.0"
