[package]
name = "message-router"
edition = "2021"
version = "0.1.0"
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
ext-messages-auth.workspace = true
hex.workspace = true
http-server.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
telemetry_utils.workspace = true
tracing.workspace = true
tvm_types.workspace = true

mockall = "0.13.1"

[dev-dependencies]
actix-rt = "2.10.0"
