[package]
name = "migration-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
include_dir = "0.7.3"
indoc = "2"
lazy_static.workspace = true
rusqlite.workspace = true
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }

[[bin]]
name = "migration-tool"
path = "src/main.rs"
