[package]
name = "migration-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
include_dir = "0.7.3"
indoc = "2"
lazy_static.workspace = true
rusqlite.workspace = true
rusqlite_migration = { version = "2", features = ["from-directory"] }

[[bin]]
name = "migration-tool"
path = "src/main.rs"

[build-dependencies]
cargo-emit = "0.2.1"
merkle_hash = "3.7.0"

[dev-dependencies]
testdir.workspace = true

[package.metadata.cargo-machete]
ignored = ["cargo-emit", "merkle_hash"]
