[package]
name = "network"
edition = "2021"
version = "0.1.0"
rust-version.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
chitchat.workspace = true
clap.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

quinn = { version = "0.11.6", features = ["rustls"] }

futures = "0.3.31"
rcgen = "0.13.2"
rustls = { version = "0.23.20", default-features = false }
rustls-pemfile = "2.2.0"
wtransport = { version = "0.5.0", features = ["dangerous-configuration", "quinn"] }

[dev-dependencies]
rand = "0.8.5"

[features]
# Use automocks in binaries
use_automocks = []
