[package]
name = "node-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
gosh_blst.workspace = true
hex.workspace = true
network.workspace = true
node.workspace = true
parse_duration = "2.1.1"
serde_json.workspace = true
tvm_block.workspace = true
tvm_client.workspace = true
tvm_types.workspace = true

url.workspace = true
